Education mobile page style changes, home page css fixes, project added for mobile version

--- a/website/static/css/mobile.css
+++ b/website/static/css/mobile.css
@@ -107,15 +107,15 @@
 }
 
 .project_description {
-  width: 58%;
-  margin-left: 2%;
+  width: 95%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .project_photo {
-  float: right;
-  margin-right: 4%;
-  margin-bottom: 15px;
-  width: 32%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 75%;
   position: relative;
 }
 
@@ -125,7 +125,20 @@
   margin-right: auto;
 }
 
+.thrive_description {
+  width: 95%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .insta_photo {
+  margin-left: auto;
+  margin-right: auto;
+  width: 75%;
+  position: relative;
+}
+
+.thrive_photo {
   margin-left: auto;
   margin-right: auto;
   width: 75%;
@@ -145,6 +158,23 @@
   padding: 12px;
   color: white;
   background-color: hsl(0, 0%, 0%, .05);
+
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+.prev_light, .next_light {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 12px;
+  color: white;
+  background-color: hsl(1, 0%, 100%, .2);
 
   font-weight: bold;
   font-size: 18px;
@@ -174,6 +204,20 @@
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
   background-color: hsl(0, 0%, 0%, .2);
+}
+
+.next_light {
+  right: 0px;
+  border-radius: 3px 0 0 3px;
+}
+
+.prev_light {
+  left: 0px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev_light:hover, .next_light:hover {
+  background-color: hsl(0, 0%, 100%, .6);
 }
 
 .dot {
@@ -253,7 +297,7 @@
 }
 
 .class_list {
-  width: 37%;
+  width: 100%;
   margin-left: 0px;
 }
 
@@ -263,8 +307,8 @@
 }
 
 .class_info {
-  width: 61%;
-  margin-right: 1%;
+  width: 100%;
+  margin-right: 0%;
   margin-top: 5px;
   margin-bottom: 5px;
   float: right;
